--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,12 @@
   }
 }
 
+@layer utilities {
+  .section-container {
+    @apply mx-auto max-w-[1600px] px-8 py-20 md:py-24
+  }
+}
+
 .swiper {
   width: 100%;
   height: 100%;
